bin/parser/.antlr/PmmParser.java
// Generated from c:\Users\J\2019-workspace\DLP\bin\parser\Pmm.g4 by ANTLR 4.7.1

import ast.*;
import ast.Definition.*;
import ast.expressions.*;
import ast.statements.*;
import ast.types.*;
import parser.LexerHelper;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		TRASH=39, INT_CONSTANT=40, COMMENT=41, MULTI_COMMENT=42, REAL_CONSTANT=43, 
		CHAR_CONSTANT=44, ID=45;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_funcionDefinition = 2, RULE_varDefinitionStat = 3, 
		RULE_complexType = 4, RULE_structTypeDefinition = 5, RULE_varDefinition = 6, 
		RULE_expression = 7, RULE_statement = 8, RULE_simpleType = 9;
	public static final String[] ruleNames = {
		"program", "main", "funcionDefinition", "varDefinitionStat", "complexType", 
		"structTypeDefinition", "varDefinition", "expression", "statement", "simpleType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'def main'", "'():'", "'{'", "'}'", "'def'", "'('", "','", 
		"')'", "':'", "'struct'", "'['", "']'", "'.'", "'-'", "'!'", "'*'", "'/'", 
		"'%'", "'+'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'||'", "'&&'", 
		"'='", "'print'", "'input'", "'if'", "'else'", "'while'", "'return'", 
		"'int'", "'double'", "'char'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "TRASH", "INT_CONSTANT", "COMMENT", "MULTI_COMMENT", 
		"REAL_CONSTANT", "CHAR_CONSTANT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public VarDefinitionContext v2;
		public FuncionDefinitionContext f;
		public MainContext m;
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<FuncionDefinitionContext> funcionDefinition() {
			return getRuleContexts(FuncionDefinitionContext.class);
		}
		public FuncionDefinitionContext funcionDefinition(int i) {
			return getRuleContext(FuncionDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

				ArrayList<Definition> Defs = new ArrayList<Definition>();
				
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5 || _la==ID) {
				{
				setState(28);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(21);
					((ProgramContext)_localctx).v2 = varDefinition();
					setState(22);
					match(T__0);

						for(VarDefinition s :((ProgramContext)_localctx).v2.ast){
						Defs.add((Definition)s);
						}
							
					}
					break;
				case T__5:
					{
					setState(25);
					((ProgramContext)_localctx).f = funcionDefinition();

						Defs.add((Definition)((ProgramContext)_localctx).f.ast);
						
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(33);
			((ProgramContext)_localctx).m = main();

				Defs.add((Definition)((ProgramContext)_localctx).m.ast);
				((ProgramContext)_localctx).ast =  new Program(0, 0, Defs);
				
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public FuncionDefinition ast;
		public Token d;
		public VarDefinitionStatContext v;
		public StatementContext s;
		public List<VarDefinitionStatContext> varDefinitionStat() {
			return getRuleContexts(VarDefinitionStatContext.class);
		}
		public VarDefinitionStatContext varDefinitionStat(int i) {
			return getRuleContext(VarDefinitionStatContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			ArrayList<Statement> TempStat = new ArrayList<Statement>();

			setState(38);
			((MainContext)_localctx).d = match(T__1);
			setState(39);
			match(T__2);
			setState(40);
			match(T__3);
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(41);
					((MainContext)_localctx).v = varDefinitionStat();

						for(Statement s :((MainContext)_localctx).v.ast){
						TempStat.add(s);
						}
							
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__14) | (1L << T__15) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__34) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << ID))) != 0)) {
				{
				{
				setState(49);
				((MainContext)_localctx).s = statement();

					TempStat.add(((MainContext)_localctx).s.ast);
					
					
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(T__4);

			FuncionType FuncType=new FuncionType(((MainContext)_localctx).d.getLine(),((MainContext)_localctx).d.getCharPositionInLine()+1,new ArrayList<VarDefinition>(),new VoidType(((MainContext)_localctx).d.getLine(),((MainContext)_localctx).d.getCharPositionInLine()+1));
				((MainContext)_localctx).ast =  new FuncionDefinition(((MainContext)_localctx).d.getLine(), ((MainContext)_localctx).d.getCharPositionInLine()+1,"main",TempStat,FuncType);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionDefinitionContext extends ParserRuleContext {
		public FuncionDefinition ast;
		public Token id;
		public VarDefinitionContext v1;
		public VarDefinitionContext vplus;
		public SimpleTypeContext simpleType;
		public VarDefinitionStatContext v;
		public StatementContext s;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public List<VarDefinitionStatContext> varDefinitionStat() {
			return getRuleContexts(VarDefinitionStatContext.class);
		}
		public VarDefinitionStatContext varDefinitionStat(int i) {
			return getRuleContext(VarDefinitionStatContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public FuncionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionDefinition; }
	}

	public final FuncionDefinitionContext funcionDefinition() throws RecognitionException {
		FuncionDefinitionContext _localctx = new FuncionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcionDefinition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

				ArrayList<Statement> TempStat = new ArrayList<Statement>();
				ArrayList<VarDefinition> TempVarDefinition = new ArrayList<VarDefinition>();
				
				
			setState(61);
			match(T__5);
			setState(62);
			((FuncionDefinitionContext)_localctx).id = match(ID);

				Type temporalType=new VoidType(((FuncionDefinitionContext)_localctx).id.getLine(),((FuncionDefinitionContext)_localctx).id.getCharPositionInLine()+1);
				
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				{
				{
				setState(64);
				match(T__6);
				{
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(65);
					((FuncionDefinitionContext)_localctx).v1 = varDefinition();

							TempVarDefinition.addAll(((FuncionDefinitionContext)_localctx).v1.ast);
							
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__7) {
						{
						{
						setState(67);
						match(T__7);
						{
						setState(68);
						((FuncionDefinitionContext)_localctx).vplus = varDefinition();

								TempVarDefinition.addAll(((FuncionDefinitionContext)_localctx).vplus.ast);
								
						}
						}
						}
						setState(75);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				}
				setState(78);
				match(T__8);
				setState(79);
				match(T__9);
				}
				}
				break;
			case T__2:
				{
				{
				setState(80);
				match(T__2);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__35) | (1L << T__36) | (1L << T__37))) != 0)) {
				{
				setState(83);
				((FuncionDefinitionContext)_localctx).simpleType = simpleType();

				temporalType=((FuncionDefinitionContext)_localctx).simpleType.ast;

					
					
					
					
				}
			}

			setState(88);
			match(T__3);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(89);
					((FuncionDefinitionContext)_localctx).v = varDefinitionStat();

						for(Statement s :((FuncionDefinitionContext)_localctx).v.ast){
						TempStat.add(s);
						}
							
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__14) | (1L << T__15) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__33) | (1L << T__34) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << ID))) != 0)) {
				{
				{
				setState(97);
				((FuncionDefinitionContext)_localctx).s = statement();

					TempStat.add(((FuncionDefinitionContext)_localctx).s.ast);
					
					
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(T__4);

				FuncionType FuncType=new FuncionType(((FuncionDefinitionContext)_localctx).id.getLine(),((FuncionDefinitionContext)_localctx).id.getCharPositionInLine()+1, TempVarDefinition,temporalType);
				((FuncionDefinitionContext)_localctx).ast =  new FuncionDefinition(((FuncionDefinitionContext)_localctx).id.getLine(), ((FuncionDefinitionContext)_localctx).id.getCharPositionInLine()+1, ((FuncionDefinitionContext)_localctx).id.getText(),TempStat,FuncType);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefinitionStatContext extends ParserRuleContext {
		public ArrayList<Statement> ast = new ArrayList<Statement>();
		public VarDefinitionContext v2;
		public Token Sid;
		public StructTypeDefinitionContext structTypeDefinition;
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public StructTypeDefinitionContext structTypeDefinition() {
			return getRuleContext(StructTypeDefinitionContext.class,0);
		}
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public VarDefinitionStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinitionStat; }
	}

	public final VarDefinitionStatContext varDefinitionStat() throws RecognitionException {
		VarDefinitionStatContext _localctx = new VarDefinitionStatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDefinitionStat);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(108);
				((VarDefinitionStatContext)_localctx).v2 = varDefinition();
				setState(109);
				match(T__0);

					for(VarDefinition s :((VarDefinitionStatContext)_localctx).v2.ast){
					_localctx.ast.add((Statement)s);
					}
					
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(112);
				((VarDefinitionStatContext)_localctx).Sid = match(ID);
				setState(113);
				match(T__9);
				setState(114);
				((VarDefinitionStatContext)_localctx).structTypeDefinition = structTypeDefinition();
					
					_localctx.ast.add((Statement)new VarDefinition(((VarDefinitionStatContext)_localctx).Sid.getLine(),((VarDefinitionStatContext)_localctx).Sid.getCharPositionInLine()+1, (((VarDefinitionStatContext)_localctx).Sid!=null?((VarDefinitionStatContext)_localctx).Sid.getText():null),((VarDefinitionStatContext)_localctx).structTypeDefinition.ast));
					
				}
				setState(117);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexTypeContext extends ParserRuleContext {
		public Type ast;
		public StructTypeDefinitionContext structTypeDefinition;
		public SimpleTypeContext simpleType;
		public StructTypeDefinitionContext structTypeDefinition() {
			return getRuleContext(StructTypeDefinitionContext.class,0);
		}
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public ComplexTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexType; }
	}

	public final ComplexTypeContext complexType() throws RecognitionException {
		ComplexTypeContext _localctx = new ComplexTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_complexType);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				((ComplexTypeContext)_localctx).structTypeDefinition = structTypeDefinition();
				((ComplexTypeContext)_localctx).ast = ((ComplexTypeContext)_localctx).structTypeDefinition.ast;
				}
				break;
			case T__35:
			case T__36:
			case T__37:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(124);
				((ComplexTypeContext)_localctx).simpleType = simpleType();
				((ComplexTypeContext)_localctx).ast = ((ComplexTypeContext)_localctx).simpleType.ast;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructTypeDefinitionContext extends ParserRuleContext {
		public StructType ast;
		public Token a;
		public Token newid;
		public Token newid2;
		public Token size;
		public ComplexTypeContext complexType;
		public List<ComplexTypeContext> complexType() {
			return getRuleContexts(ComplexTypeContext.class);
		}
		public ComplexTypeContext complexType(int i) {
			return getRuleContext(ComplexTypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public List<TerminalNode> INT_CONSTANT() { return getTokens(PmmParser.INT_CONSTANT); }
		public TerminalNode INT_CONSTANT(int i) {
			return getToken(PmmParser.INT_CONSTANT, i);
		}
		public StructTypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structTypeDefinition; }
	}
